test-suite/output/UnboundRef.out
File "./output/UnboundRef.v", line 1, characters 11-12:
Error: The reference a was not found in the current environment.

