test-suite/output/UnboundRef.v
Check Prop a b.
(* Prop is because we need a real head for the application *)
